add the custom font plugins

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ckeditor/ckeditor5-easy-image": "^28.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^28.0.0",
     "@ckeditor/ckeditor5-essentials": "^28.0.0",
+    "@ckeditor/ckeditor5-font": "github:ostapoff/ckeditor5-custom-font",
     "@ckeditor/ckeditor5-heading": "^28.0.0",
     "@ckeditor/ckeditor5-image": "^28.0.0",
     "@ckeditor/ckeditor5-indent": "^28.0.0",
