--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ckeditor/ckeditor5-build-classic",
+  "name": "ckeditor5-build-classic",
   "version": "28.0.0",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
   "keywords": [
@@ -66,7 +66,7 @@
   "license": "GPL-2.0-or-later",
   "homepage": "https://ckeditor.com/ckeditor-5",
   "bugs": "https://github.com/ckeditor/ckeditor5/issues",
-  "repository": {
+  "_repository": {
     "type": "git",
     "url": "https://github.com/ckeditor/ckeditor5.git",
     "directory": "packages/ckeditor5-build-classic"
