--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ckeditor5-build-classic",
+  "name": "ckeditor5-build-custom-classic",
   "version": "28.0.0",
   "description": "The classic editor build of CKEditor 5 – the best browser-based rich text editor.",
   "keywords": [
