--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ckeditor/ckeditor5-media-embed": "^28.0.0",
     "@ckeditor/ckeditor5-paragraph": "^28.0.0",
     "@ckeditor/ckeditor5-paste-from-office": "^28.0.0",
+    "@ckeditor/ckeditor5-remove-format": "^28.0.0",
     "@ckeditor/ckeditor5-table": "^28.0.0",
     "@ckeditor/ckeditor5-typing": "^28.0.0"
   },
