--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ckeditor/ckeditor5-block-quote": "^28.0.0",
     "@ckeditor/ckeditor5-ckfinder": "^28.0.0",
     "@ckeditor/ckeditor5-cloud-services": "^28.0.0",
+    "@ckeditor/ckeditor5-cmslink": "github:ostapoff/ckeditor5-cmslink",
     "@ckeditor/ckeditor5-easy-image": "^28.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^28.0.0",
     "@ckeditor/ckeditor5-essentials": "^28.0.0",
